# E2E-Auto-Test-Demo

./: README.md  k8s_config.yaml  log_config.py  main.py  pyproject.toml  run_oss_test.py  test_login_oss.py  test_oss_create.py
.gemini/: settings.json
module/: infra_module.py  oss_module.py  service_module.py
